# DLSS-AMD

./: ARCHITECTURE.md  BUILD.md  BUILD_FIX_SUMMARY.md  BUILD_SUCCESS.md  CMakeLists.txt  DOCUMENTATION_UPDATE.md  FINAL_STATUS.md  GUI_IMPLEMENTATION_COMPLETE.md  INDEX.md  MINHOOK_INSTALLATION.md  ORGANIZATION_COMPLETE.md  POLICY_WORKAROUND.md  PROJECT_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_READY.md  TASK_COMPLETE.md  TASK_COMPLETION_VERIFICATION.txt  build.bat  build.ps1  build_installer.bat  build_installer.ps1  install-user.ps1  install.ps1  run_installer.bat
distribution/: .gitignore  LICENSE  afglobal_config.json
distribution/installer/: afglobal_installer.iss
distribution/src/afglobal_dll/: amf_optical_flow.cpp  dllmain.cpp  dxgi_hooks.cpp  dxgi_hooks.h  frame_interpolator.cpp  frame_interpolator.h  named_pipe_server.cpp
distribution/src/afglobal_exe/: injector.cpp  process_monitor.cpp
distribution/src/common/: logger.h
installer/: afglobal_installer.iss
src/afglobal_dll/: amf_optical_flow.h  named_pipe_server.h
src/afglobal_exe/: gui_log_viewer.cpp  gui_log_viewer.h  gui_process_manager.cpp  gui_process_manager.h  gui_window.cpp  gui_window.h  injector.h  main.cpp  named_pipe_client.cpp  named_pipe_client.h  process_monitor.h  tray_app.cpp  tray_app.h
src/common/: config.cpp  config.h  constants.h  logger.cpp
